tests/reference/asr-continue_compilation_1-04b6d40.stderr
semantic error: Derived type `another_undefined_type` is not defined
  --> tests/errors/continue_compilation_1.f90:50:9
   |
50 |         type(another_undefined_type) :: s3_in_subroutine
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Type used here is not defined in any scope


Note: Please report unclear, confusing or incorrect messages as bugs at
https://github.com/lfortran/lfortran/issues.
